fix: permission dialog no longer flickers

--- a/urlbar/debloat_urlbar.css
+++ b/urlbar/debloat_urlbar.css
@@ -1,6 +1,6 @@
 #tracking-protection-icon-container { display: none; }
 
-#identity-box { display: none; }
+/*#identity-box { display: none; }*/
 
 #reader-mode-button { display: none; }
 
